# CatVTON-Runpod-Serverless

./: .crush.json  .env.example  .gitignore  .gitmodules  Dockerfile  Dockerfile.flux  Dockerfile.flux_s3  Dockerfile.pod  Dockerfile.pod.final  Dockerfile.volume  Justfile  Justfile.windows  MIGRATION.md  PERFORMANCE_STRESS.md  PERFORMANCE_STRESS_2.md  SUMMARY.md  app.py  app_flux.py  app_flux_s3.py  app_sd_volume.py  backend.py  catvton_workflow.json  diagnose_environment.py  entrypoint.final.sh  entrypoint.sh  gunicorn_conf.py  logs.txt  main.py  main_prod.py  main_random.py  manage_backend.sh  optimize_models.py  provision_runpod_volume.sh  pyproject.toml  requirements.txt  run_server.py  runpod_logs_parallel.txt  sharif_em.pub  start.sh  start_backend.sh  (+9 more)
context/: CATVTON.md  CATVTON_DETAILED.md  CATVTON_REVIEW.md  CONTEXT7.md  DOCKERFILE_INFO.md  DOCKER_BUILDX.md  JUST_SETTINGS.md  SD_INPAINTING.md  TESTING_RESULTS.md  UV_CLI.md  UV_ENV_VARS.md
context/docker/: buildkit.md
context/load_balancing/: build_worker.md  overview.md  vllm.md
context/storage/: network_volumes.md  overview.md  s3.md
